v1.14: Correct AR & PN overflow, implement Typewriter config, plus misc.
. Correct determination of arithmetic overflow (FO) in Processor.
. Implement configurable left-margin and tab stops in Typewriter.
. Add extra delay in Typewriter Type-O-Matic after a reload (/)
keystroke to allow the reload cycle to complete.
. Correct reading and punching of PT and PTR paper-tape image formats --
the two formats were reversed.
. Improve Plotter pen-up speed; remove focus from PEN caption after
double-clicking it to toggle display of the pen carriage.
. Correct isNaN() calls in SystemConfig.js.
. Reduce power-off delay from 3 to 2 seconds.
. Remove extraneous <WARNING> console log entries by Processor.
. Shift focus back to FrontPanel after clicking the button to load a
tape image.

--- a/webUI/G15.css
+++ b/webUI/G15.css
@@ -429,7 +429,7 @@ H1 {
     height:             100%;
     width:              calc(100% - 8px);
     min-width:          600px;                  /* same as ControlPanelFrame */
-    max-width:          calc(133ch + 20px);     /* allow for scroll bar */
+    max-width:          100%;
     left:               50%;
     transform:          translate(-50%, 0);
     font-size:          12px;
@@ -439,7 +439,6 @@ H1 {
     height:             100%;
     width:              100%;
     min-width:          600px;                  /* same as ControlPanelFrame */
-    max-width:          calc(133ch + 20px);     /* allow for scroll bar */
     left:               50%;
     transform:          translate(-50%, 0);
     white-space:        pre;
